# django_rag_test

./: .env_sample  .gitignore  README.md  main.py  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
documents/: admin.py  forms.py  models.py  urls.py  views.py
documents/migrations/: 0001_initial.py
rag/: services.py  urls.py  views.py
static/css/: style.css
static/js/: file_upload.js  main.js
templates/: base.html  home.html
templates/documents/: document_list.html  document_upload.html
templates/rag/: chat.html
