[project]
name = "django-rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-allauth>=0.63.0",
    "django-bootstrap5>=24.2",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-chroma>=0.1.0",
    "unstructured[md]>=0.15.0",
    "python-decouple>=3.8",
    "langsmith>=0.1.0",
    "chromadb>=0.5.0",
]
